plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'org.avniproject'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.reflections:reflections:0.10.2'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation "log4j:log4j:1.2.17"
	implementation 'com.amazonaws:aws-java-sdk-s3:1.11.971'
	implementation 'com.auth0:jwks-rsa:0.3.0'
	implementation 'com.auth0:java-jwt:3.3.0'
	implementation 'org.keycloak:keycloak-spring-boot-starter:21.0.2'
	implementation 'org.keycloak:keycloak-admin-client:21.0.2'
	implementation 'org.antlr:ST4:4.3.4'
    implementation 'org.hibernate:hibernate-validator:7.0.5.Final'
}

tasks.named('test') {
	useJUnitPlatform()
}
